JSON, fetch, asincronía

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
         <section id="contenedor-opciones">
             <div class="contenedor-tipo-gasto">
                 <h2>Tipo de gasto</h2>
-                <select>
-                    <option class="tipo-gasto">Diarios</option>
-                    <option class="tipo-gasto">Semanales</option>
-                    <option class="tipo-gasto">Mensuales</option>
-                </select>
+                <select id="tipos-gastos"></select>
                 <button id="aceptar">Aceptar</button>
             </div>
             <div class="contenedor-categoria-gasto">
